<?xml version="1.0"?>
<package format="2">
  <name>choreonoid_ros_gen2</name>
  <version>0.0.1</version>
  <description>The choreonoid_ros_gen2 package</description>
  <maintainer email="suzuki.kenta38@jaea.go.jp">Kenta Suzuki</maintainer>
  <license>MIT</license>
  <author email="suzuki.kenta38@jaea.go.jp">Kenta Suzuki</author>

  <url type="repository">https://github.com/k38-suzuki/choreonoid_ros_gen2.git</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>choreonoid</depend>
  <depend>choreonoid_ros</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>kinova_driver</depend>
  <depend>kinova_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
