choreonoid_add_simple_controller(MyGen2JointController Gen2JointController.cpp)
target_link_libraries(MyGen2JointController ${catkin_LIBRARIES})

choreonoid_add_simple_controller(MyGen2CartesianController Gen2CartesianController.cpp)
target_link_libraries(MyGen2CartesianController ${catkin_LIBRARIES})
